Fix Bchat update popup modal alignment issues

--- a/stylesheets/_modal.scss
+++ b/stylesheets/_modal.scss
@@ -9,6 +9,13 @@
   z-index: 100;
   overflow-y: auto;
 
+  &-center
+  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .content ,.contentUpdateModal {
     position: relative;
     max-width: 350px;
@@ -21,9 +28,12 @@
   }
   .contentUpdateModal
   {
+    max-width: 654px;
     background-color: var(--color-smModal-bg);
     text-align: center;
+    margin: 0;
   }
+  
   &-UpdateModal{
     
     &-discription
@@ -34,14 +44,19 @@
         font-family: $bchat-font-poppin-medium;
       }
     }
+    &-header
+    {
+      font-family: $bchat-font-poppin-semibold;
+    }
     &-icon
     {
-      color:red
+      // color:red
+      width: 50px;
     }
 
     &-btnBox
     {
-      width: 60%;
+      width: 26%;
       margin: auto;
     }
     }
